# libtinylogger

./: .gitignore  LICENSE  Makefile.am  README-install-lib.txt  README.md  _config.yml  configure.ac
demo/: .gitignore  Makefile.am  ParseDate.java  ParseXMLDate.java  beehive.c  check-timezone.c  clocks.c  demo-utils.c  demo-utils.h  demo.c  formats.c  hello_world.c  json-timezones.c  json.c  levels.c  log_mem.c  logrotate.c  parse_time.c  perf-test.c  second.c  stream-of-logs.c  threads.c  xml-levels.c  xml.c
doc/: Makefile.am  doxygen.conf.in  fix_guide.sh  fix_links.awk
guide/: Makefile.am  daemon-hints.md  doxygen.md  examples.md  formats.md  guide.md  install-as-lib.md  json-formatter.md  json-reader.md  levels.md  logger.dtd  performance.md  public-symbols.md  quick-start.md  xml_formatter.md
quick-start/: .gitignore  Doxyfile  Makefile  Makefile.demo-lib  Makefile.examples  Makefile.logger  config.h  setup.sh
src/: .gitignore  Makefile.am  formatters.c  hexformat.c  json_formatter.c  linked-list.c.in  linked-list.h.in  logrotate.c  logrotate.service  private.h  structured_formatters.c  timezone.c  tinylogger.c  tinylogger.h  xml_formatter.c
src/alternatives/: sd-daemon.h
utils/: .gitignore  Makefile.am  check-symbols.sh  file-to-json.c  gen-json-examples.sh  regression.sh
